# test-framework-review

./: .clang-format  .gitignore  README.md
.github/workflows/: test.yml
cmake/: cpputest_helper.cmake  fff_helper.cmake
examples/ceedling/: project.yml
examples/ceedling/test/: test_temperature.c
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/hal/: CMakeLists.txt  adc.c  adc.h
src/sensors/: CMakeLists.txt  temperature.c  temperature.h  temperature_fff_test.cpp  temperature_test.cpp
